--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Arc-Dark
+gtk-theme-name=NumixSolarizedDark
 gtk-icon-theme-name=Numix
 gtk-font-name=Roboto 10
 gtk-cursor-theme-name=Vanilla-DMZ
