--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,15 +1,19 @@
 # Shadows
 
-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.5;
+#shadow = true;
+#shadow-radius = 7;
+#shadow-offset-x = -7;
+#shadow-offset-y = -7;
+#shadow-opacity = 0.5;
+#shadow-exclude = [
+#  "class_g = 'conky'",
+#  "n:a:conky"
+#];
 
 # Opacity
 
 #menu-opacity = 0.8;
-inactive-opacity = 0.85;
+inactive-opacity = 0.95;
 
 fading = true;                  # Fade windows during opacity changes.
 fade-delta = 12;                # The time between steps in a fade in milliseconds. (default 10).
