--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -26,8 +26,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ]]
 
 conky.config = {
-    alignment = 'top_left',
-    background = true,
+    alignment = 'top_right',
+    background = false,
 	double_buffer = true,
     border_width = 1,
     cpu_avg_samples = 2,
@@ -42,16 +42,17 @@ conky.config = {
 	xftalpha = 1,
     font = 'Roboto:size=12',
     gap_x = 20,
-    gap_y = 60,
-    minimum_height = 5,
-	minimum_width = 5,
+--    gap_y = 60,
+	gap_y = 112,
+--    minimum_height = 5,
+--	minimum_width = 5,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
     out_to_stderr = false,
     extra_newline = false,
     own_window = true,
-    own_window_class = 'Conky',
+    own_window_class = 'conky',
     own_window_type = 'override',
 	own_window_transparent = true,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
@@ -60,36 +61,51 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     show_graph_scale = false,
-    show_graph_range = false
+    show_graph_range = false,
+
+	minimum_width = 520,
+	minimum_height = 600,
+	maximum_width = 520,
+
+	lua_load = '~/.config/conky/lib.lua',
+	lua_draw_hook_pre = 'conky_main'
 }
 
 conky.text = [[
-${font Radio Space 3D:size=48}${alignc}${time %H:%M:%S}
+${font Michroma:size=10}${alignr 380}${voffset 65}${time %a} ${time %x}
+${font Michroma:size=18}${alignr 380}${voffset -8}${time %H}:${time %M}
+
+${battery}
+${battery_percent}
+${battery_short}
+${battery_time}
+
+${gw_ip}
+
+#${font Radio Space 3D:size=48}${alignc}${time %H:%M:%S}
 ${font UbuntuMono Nerd Font:size=24} $kernel
-${font Roboto:size=12}
-$hr
-Essid:$color ${wireless_essid wlp2s0}
-Quality: ${wireless_link_qual wlp2s0}
-${battery_bar 20,100}
-$battery
-$cpugauge
-$loadgraph
-$hr
-${color grey}Uptime:$color $uptime
-${color grey}Frequency (in MHz):$color $freq
-${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color grey}CPU Usage:$color $cpu% ${cpubar 4}
-${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
-$hr
-${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
-${color grey}Networking:
-Up:$color ${upspeed enp3s0} ${color grey} - Down:$color ${downspeed enp3s0}
-$hr
-${color grey}Name              PID   CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+#${font Roboto:size=12}
+#${font Roboto:size=10}${alignr 300}${voffset -5}${color0}${time %a} ${color0}${time %x}
+#${font Roboto:size=18}${alignr 318}${color1}${voffset -4}${time %H}:${time %M}
+#${battery_bar 20,100}
+#$cpugauge
+#$loadgraph
+#$hr
+#${color grey}Uptime:$color $uptime
+#${color grey}Frequency (in MHz):$color $freq
+#${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
+#${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
+#${color grey}CPU Usage:$color $cpu% ${cpubar 4}
+#${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
+#$hr
+#${color grey}File systems:
+# / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+#${color grey}Networking:
+#Up:$color ${upspeed enp3s0} ${color grey} - Down:$color ${downspeed enp3s0}
+#$hr
+#${color grey}Name              PID   CPU%   MEM%
+#${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
+#${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
+#${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
+#${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
 ]]
