--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,3 +53,5 @@ set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture p
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+# source-file '~/.config/tmux/tokyonight-day.theme
