--- a/.config/alacritty/font.toml
+++ b/.config/alacritty/font.toml
@@ -1,4 +1,7 @@
 [font]
 # normal = { family = "MesloLGS Nerd Font Mono", style = "Regular" }
-normal = { family = "MesloLGS Nerd Font", style = "Regular" }
+# normal = { family = "MesloLGS Nerd Font", style = "Regular" }
+# normal = { family = "FiraCode Nerd Font", style = "Regular" }
+normal = { family = "Hack Nerd Font", style = "Regular" }
+# normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 size = 16
